--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 The ParadisEO framework is required to run this optimization problem. 
-ParadisEO 1.2.1 is used, see http://paradiseo.gforge.inria.fr/ for 
+ParadisEO 1.3-beta2 is used, see http://paradiseo.gforge.inria.fr/ for 
 more information and to download it.
 
 The model and data used for this implementation is based on Maladis et. al. 
@@ -14,4 +14,14 @@ ParadisEO has been installed.
 3. cd build
 4. cmake ..
 5. make
-6. ./application/SCN_NSGAII
+
+Then to run NSGA-II:
+ ./application/SCN_NSGAII
+	you can also run the algorithm with various options, e.g.:
+ ./application/SCN_NSGAII --outputFile=results.csv --maxGen=10000
+  --popSize=250 --pMut=0.25 --pCross=0.75
+
+To run SPEA2:
+ ./applicantion/SCN_SPEA2
+	the same options are possible as with NSGA-II
+
